# AI_TTS

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml  entrypoint.sh  new_tts_inference.py  new_tts_stream.py  pyproject.toml  test.py  voice_configs.yaml
.github/workflows/: docker-dev.yml
redis_codes/: abstract_models.py  fish_engine.py  real_time_tts_models.py  test_model_inference.py  test_rt_tts_model.py  test_tts_redis.py  text2semantic.py
src/: borhan_realtime.py  clean_main.py  dia_engine.py  fish_engine.py  fish_text2speech.py  main.py  main_service.py  main_service_cp.py  modded_dac_vq.yaml  test.py  test_con2.py  test_concurrent_redis.py  test_dia_engine.py  test_fish_engine.py  test_tts_redis.py  tts_server_temp.py  tts_service copy.py  tts_service.py  tts_service_backup_original.py  tts_service_borhan_interrupt.py  tts_service_last.py
src/fish_speech/fish_speech/models/dac/: inference.py
src/fish_speech/fish_speech/models/text2semantic/: inference.py
src/fish_speech/fish_speech/utils/: logging_utils.py  rich_utils.py
src/models/fish_speech/: voice.py
src/models/fish_speech/configs/: base.yaml  firefly_gan_vq.yaml  text2semantic_finetune.yaml
src/models/fish_speech/configs/lora/: r_8_alpha_16.yaml
src/models/fish_speech/datasets/: semantic.py  vqgan.py
src/models/fish_speech/inference_engine/: __init__.py  reference_loader.py  vq_manager.py
src/models/fish_speech/models/text2semantic/: custom_loader.py  inference.py  inference_default.py  lit_module.py  llama.py
src/models/fish_speech/models/vqgan/: inference.py
src/models/fish_speech/text/: spliter.py
src/models/fish_speech/utils/: logging_utils.py  rich_utils.py  schema.py
src/src/: client.py  dia_test.py  main.py  server.py
src/test/ref/: reference_text.txt
